Changelog

[B]0.1.10[/B]
- Exception handling on SystemExit implemented

[B]0.1.9[/B]
- Command sequence of 3D Mode now depends from selected/current view mode instead of filename convention
  This prevents from switching to view modes defined by filename if user select other view mode as suggested

[B]0.1.8[/B]
- Addon splitted into script module and service module for better compatibility

[B]0.1.7[/B]
- lower delay values reimplemented

[B]0.1.4[/B]
- smaller improvements

[B]0.1.3[/B]
- Key delay redefined
- improved communication handling

[B]0.1.2[/B]
- Default code sequences redefined

[B]0.1.0[/B]
  - Second release
  - extended settings
  - user defined key codes
  - adjustable key delay

[B]0.0.2[/B]
  - Improved setup handling

[B]0.0.1[/B]
  - Initial version